deploy/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: easybanner-deployment 
  namespace: sre-tools  # 替换为你的命名空间
  labels:  
    app: easybanner
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: easybanner
  template: 
    metadata:
      labels:
        app: easybanner
    spec:
      volumes:
        - name: easybanner-secret-config
          secret:
            secretName: easybanner-secret
      containers: 
      - name: easybanner
        image: beatrueman/easybanner:v1.0.7
        volumeMounts:
          - name: easybanner-secret-config
            mountPath: /app/secrets
        ports:
        - containerPort: 8080
