deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easybanner-service
  namespace: sre-tools # 替换为你的命名空间
spec:
  #type: NodePort
  selector:
    app: easybanner
  ports:
    - protocol: TCP 
      port: 8080
      targetPort: 8080
